--- a/style.css
+++ b/style.css
@@ -14,20 +14,32 @@
 }
 #header {
   text-align: center;
-  height: 200px;
-  background-size: cover;
-  /*background-image: url(https://img.wallpapersafari.com/desktop/800/450/80/94/z1C35F.jpg);
-*/
-  background-color: rgb(36, 50, 88);
+  height: 300px;
+  background-color: rgb(24, 6, 53);
+}
+.h1text {
+  padding: 60px;
+  font-family: "Libre Baskerville", serif;
+  color: rgb(41, 255, 237);
+}
+hr {
+  width: 75%;
+  margin: auto;
+}
+a {
+  font-size: 1em;
+  font-family: "Fredoka", sans-serif;
+  padding: 4vw;
 }
 
 a:link {
   color: antiquewhite;
+  text-decoration: none;
 }
 a:hover {
-  color: #2c3e50;
+  text-decoration-line: underline;
 }
-.h1text {
-  font-family: serif;
+a:visited {
   color: antiquewhite;
+  text-decoration: none;
 }
