--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@
   padding: 0;
   margin: 0;
 }
+body {
+  background: linear-gradient(to bottom, rgb(4, 26, 48));
+}
 #header {
   text-align: center;
   height: 300px;
-  background-color: rgb(24, 6, 53);
+  background-color: rgb(4, 26, 48);
 }
 .h1text {
   padding: 60px;
@@ -42,4 +45,29 @@ a:hover {
 a:visited {
   color: antiquewhite;
   text-decoration: none;
+}
+img {
+  max-width: 80%;
+  height: auto;
+  background-color: white;
+  margin: 50px;
+}
+img:hover {
+  box-shadow: 10px 10px 8px #888888;
+}
+.container2 {
+  margin: 10px;
+  justify-content: left;
+}
+
+input {
+  float: right;
+  background-color: hsl(231, 50%, 27%);
+  border: none;
+  color: white;
+  margin: 20px;
+  padding: 14px 28px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
 }
